[gd_scene load_steps=10 format=3 uid="uid://d3vy4r68f4hr1"]

[ext_resource type="Theme" uid="uid://dxdst3fbdsr64" path="res://Assets/os_theme.tres" id="1_xod1k"]
[ext_resource type="Script" uid="uid://dsk3xptj8ny1h" path="res://Scenes/OSMenu/program.gd" id="1_yly6v"]
[ext_resource type="Texture2D" uid="uid://cwgtuin4u5txs" path="res://Assets/Art/settings.png" id="2_xod1k"]
[ext_resource type="AudioStream" uid="uid://dbgjdghbcvm1k" path="res://Assets/Audio/toolbar-hover.wav" id="4_747j7"]
[ext_resource type="Script" uid="uid://dphkmqhipj8ve" path="res://Scripts/input_handler.gd" id="5_236nq"]
[ext_resource type="AudioStream" uid="uid://7amhs6th1dof" path="res://Assets/Audio/check-off.wav" id="6_not2c"]
[ext_resource type="Script" uid="uid://bipc024nm7jxt" path="res://Scripts/shatter_component.gd" id="7_ev3up"]

[sub_resource type="Shader" id="Shader_ev3up"]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/
shader_type canvas_item;

// Strength of the horizontal shake
uniform float shake_power = 0.03;
// Chance of shake per frame
uniform float shake_rate : hint_range(0.0, 1.0) = 0.2;
// Speed of shake changes
uniform float shake_speed = 5.0;
// Block height in pixels (constant screen size)
uniform float shake_block_size = 30.0;
// Color separation distance
uniform float shake_color_rate : hint_range(0.0, 1.0) = 0.01;

// Screen texture
uniform sampler2D screen_texture : hint_screen_texture;

float random(float seed) {
	return fract(543.2543 * sin(dot(vec2(seed, seed), vec2(3525.46, -54.3415))));
}

void fragment() {
	float enable_shift = float(random(trunc(TIME * shake_speed)) < shake_rate);

	// Convert SCREEN_UV to pixel coordinates
	vec2 screen_pixel = SCREEN_UV / SCREEN_PIXEL_SIZE;
	
	// Divide by pixel-based block size
	float block_y = trunc(screen_pixel.y / shake_block_size) * shake_block_size;
	
	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(block_y + TIME) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod(screen_texture, fixed_uv, 0.0);
	pixel_color.r = mix(
		pixel_color.r,
		textureLod(screen_texture, fixed_uv + vec2(shake_color_rate, 0.0), 0.0).r,
		enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b,
		textureLod(screen_texture, fixed_uv + vec2(-shake_color_rate, 0.0), 0.0).b,
		enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jlpuj"]
shader = SubResource("Shader_ev3up")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 0.7670000364325
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.0
shader_parameter/shake_color_rate = 0.01

[node name="Program" type="Control" node_paths=PackedStringArray("shatter_comp", "program_sprite", "program_label", "program_hov", "pressed_sound", "glitch_effect")]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 391.0
offset_top = 228.0
offset_right = 865.0
offset_bottom = 553.0
mouse_force_pass_scroll_events = false
theme = ExtResource("1_xod1k")
script = ExtResource("1_yly6v")
shatter_comp = NodePath("ShatterComponent")
program_sprite = NodePath("Border/Control/ProgramArt")
program_label = NodePath("MarginContainer/RichTextLabel")
program_hov = NodePath("ProgramHover")
pressed_sound = NodePath("PressedSound")
glitch_effect = NodePath("CanvasLayer/GlitchEffect")

[node name="Border" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Control" type="Control" parent="Border"]
clip_contents = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -414.0
offset_top = -265.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ProgramArt" type="Sprite2D" parent="Border/Control"]
texture_filter = 1
position = Vector2(277.435, 157)
scale = Vector2(3, 3)
texture = ExtResource("2_xod1k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 40
text = "What is up my dude"
scroll_active = false

[node name="ProgramHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_747j7")
volume_db = -5.72
bus = &"SFX"

[node name="InputHandler" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("5_236nq")
metadata/_custom_type_script = "uid://dphkmqhipj8ve"

[node name="PressedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_not2c")
volume_db = 4.219
bus = &"SFX"

[node name="ShatterComponent" type="Node" parent="."]
script = ExtResource("7_ev3up")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GlitchEffect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_jlpuj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 391.0
offset_top = 228.0
offset_right = 391.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
